...
        onKick={isHost ? onKick : undefined}
      />

      <div className="mt-auto flex flex-col gap-md">
        {isHost ? (
          <>
            <Button testID={testIds.lobby.invite} label="Invite" onClick={handleOnShare} />
            <Button testID={testIds.lobby.start} label="Start" onClick={onStart} />
          </>
        ) : (
          <Button testID={testIds.lobby.leave} label="Leave" onClick={onLeave} />
        )}
      </div>
    </Container>
...
