...
        <button
          data-testid={testIds.lists.editPick}
          type="button"
          onClick={() => onEdit(item)}
          className="font-bold text-sm text-grey-100"
        >
          Edit
        </button>
      ) : null}
    </Row>
  );
}

...
